--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,14 @@ body {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   max-width: 50%;
-  /* display: flex;  
-  flex-direction: column;
-  align-items: center;
-  justify-items: center; */
 }
 
 .header {
-  height: 40%;
+  height: 35%;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
+  font-weight: 600;
 }
 
 .wrapper {
@@ -29,6 +26,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  margin-top: 5%;
+
 }
 
 .first-row,
@@ -40,7 +39,7 @@ body {
 
 .first-row > div,
 .second-row > div {
-  background: #f3b358;
+  /* background: #f3b358; */
   width: 140px;
   height: 100px;
   /* display: flex; */
