--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-items: center;
-  margin-top: 5%;
+  margin-top: 2%;
 
 }
 
@@ -35,19 +35,22 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  /* margin: 5%; */
 }
 
 .first-row > div,
 .second-row > div {
-  /* background: #f3b358; */
   width: 140px;
   height: 100px;
-  /* display: flex; */
-  /* flex-direction: row; */
 }
 
+
+
+
+/* Bounce loader */
 .ball-bounce, 
-.newton-loader {
+.newton-loader,
+.equalizer {
   position:relative;
 }
 
@@ -107,12 +110,15 @@ body {
   }
 }
 
+
+
+/* Newton loader */
 .newton-loader div {
   position: absolute;
   width: 10%;
   height: 12%;
   border-radius: 50%;
-  bottom: 20px;
+  bottom: 0;
   background-color: #fff;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
@@ -157,9 +163,11 @@ body {
   }
 }
 
+
+/* Spinner section */
 .spinner .points {
-  width: 70%;
-  height: 70%;
+  width: 60%;
+  height: 60%;
   margin: 10% auto;
   animation: rounding 2s infinite linear;
  }
@@ -193,3 +201,98 @@ body {
   }
  }
 
+/* Equalizer loader */
+.equalizer-circle {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: #fff; 
+  border-radius: 50%;
+  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.5);
+  animation-name: jumping;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.equalizer-level-1,
+.equalizer-level-2,
+.equalizer-level-3,
+.equalizer-level-4,
+.equalizer-level-5 {
+  background-color: #fff;
+  width: 10%;
+  position: absolute;
+  bottom: 0;
+  box-shadow: 1px -1px 3px 0 rgba(0,0,0,0.5);
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.equalizer-level-1 {
+  height: 20px;
+  animation-name: for-equalizer-lavel-1;
+}
+.equalizer-level-2 {  
+  left: 30px;
+  height: 40px;
+  animation-name: for-equalizer-lavel-2;
+}
+.equalizer-level-3 {  
+  left: 60px;
+  height: 60px;
+}
+.equalizer-level-4 {  
+  left: 90px;
+  height: 80px;
+  animation-name: for-equalizer-lavel-4;
+}
+.equalizer-level-5 {  
+  left: 120px;
+  height: 100px;
+  animation-name: for-equalizer-lavel-5;
+}
+@keyframes jumping {
+  0% {left: 2.5px; bottom: 20px;} /*start*/
+  6% {left: 20px; bottom: 50px;} /*up to 2*/
+  11% {left: 32.5px; bottom: 40px;} /*down to 2*/
+  17% {left: 52.5px; bottom: 70px;} /*up to 3*/
+  22% {left: 62.5px; bottom: 60px;} /*down to 3*/
+  28% {left: 80px; bottom: 90px;} /*up to 4*/
+  33% {left: 92.5px; bottom: 80px;} /*down to 4*/
+  39% {left: 107.5px; bottom: 110px;} /*up to 5*/
+  44% {left: 122.5px; bottom: 100px;} /*down to 5*/
+  50% {left: 122.5px; bottom: 20px;} /*move to small step right*/
+  56% {left: 107.5px; bottom: 50px;} /*up to 4 */
+  61% {left: 92.5px; bottom: 40px;} /*down to 4*/
+  67% {left: 80px; bottom: 70px;} /*up to 3*/
+  72% {left: 62.5px; bottom: 60px;} /*down to 3*/
+  79% {left: 52.5px; bottom: 90px;} /*up to 2*/
+  84% {left: 32.5px; bottom: 80px;} /*down to 2*/
+  90% {left: 20px; bottom: 110px;} /*up to 1*/
+  95% {left: 2.5px; bottom: 100px;} /*down to 1*/
+  100% {left: 2.5px; bottom: 20px;} /*move to small steр left*/
+}
+@keyframes for-equalizer-lavel-1 {
+  0% {height: 20px;}
+  44% {height: 20px;}
+  50% {height: 100px;}
+  95% {height: 100px;}
+}
+@keyframes for-equalizer-lavel-2 {
+  0% {height: 40px;}
+  44% {height: 40px;}
+  50% {height: 80px;}
+  95% {height: 80px;}
+}
+@keyframes for-equalizer-lavel-4 {
+  0% {height: 80px;}
+  44% {height: 80px;}
+  50% {height: 40px;}
+  95% {height: 40px;}
+}
+@keyframes for-equalizer-lavel-5 {
+  0% {height: 100px;}
+  44% {height: 100px;}
+  50% {height: 20px;}
+  95% {height: 20px;}
+}
