--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+
 }
 
 body {
@@ -17,7 +19,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  font-weight: 600;
+  font-weight: 500;
   height: 250px;
 }
 
@@ -35,7 +37,6 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  /* margin: 5%; */
 }
 
 .first-row > div,
@@ -44,69 +45,70 @@ body {
   height: 100px;
 }
 
+.second-row {
+  margin-bottom: 50px;
+}
 
-
-
-/* Bounce loader */
 .ball-bounce, 
 .newton-loader,
 .equalizer {
   position:relative;
 }
 
+/* Bounce loader */
+
 .ball-bounce .text span{
   color: #FCF9ED;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 500;
   position: absolute;
-  top: 54px;
+  top: 74px;
   left: 30px;
-  }
-
-.ball-bounce .ball{
+}
+.ball-bounce .ball {
   background-color: #FCF9ED;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 10%;
-  height: 10%;
+  top: 54px;
+  width: 12%;
+  height: 12%;
   border-radius: 50%;
   animation-name: bounce;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   transform: scale(0.5, 1);
-  }
+  margin-top: 40px;
+}
 
 @keyframes bounce {
   0%{
-    top:0px;
-    transform:scale(1, 1);
+    top: 0px;
+    transform: scale(1, 1);
   }
   15%{
-    top:5px;
+    top: 5px;
     transform:scale(1, 1);
   }
   30%{
-    top:32px;
-    transform:scale(1, 1);
+    top: 20px;
+    transform: scale(1, 1);
   }
   50%{
-    top:64px;
+    top: 40px;
     transform:scale(1.9, 0.5);
   }
   70%{
-    top:32px;
-    transform:scale(1, 1);
+    top: 20px;
+    transform: scale(1, 1);
   }
   85%{
-    top:5px;
-    transform:scale(1, 1);
+    top: 5px;
+    transform: scale(1, 1);
   }
   100%{
-    top:0px;
-    transform:scale(1, 1);
+    top: 0px;
+    transform: scale(1, 1);
   }
 }
 
@@ -115,7 +117,7 @@ body {
 /* Newton loader */
 .newton-loader div {
   position: absolute;
-  width: 10%;
+  width: 8%;
   height: 12%;
   border-radius: 50%;
   bottom: 0;
@@ -123,7 +125,7 @@ body {
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .newton-loader .first {
-  left: 20px;
+  left: 30px;
   animation: move_right .625s infinite;
 }
 .newton-loader .second {
@@ -131,11 +133,11 @@ body {
   animation: move_right .625s infinite;
 }
 .newton-loader .third {
-  left: 80px;
+  left: 70px;
   animation: disappear .625s infinite;
 }
 .newton-loader .fourth {
-  left: 20px;
+  left: 30px;
   animation: appear .625s infinite;
 }
 @keyframes move_right {
@@ -143,7 +145,8 @@ body {
       transform: translateX(0);
   }
   to {
-      transform: translateX(60px);
+    
+      transform: translateX(20px);
   }
 }
 @keyframes appear {
@@ -165,20 +168,27 @@ body {
 
 
 /* Spinner section */
+.spinner {
+    animation: rounding 2s infinite linear;  
+}
+
 .spinner .points {
-  width: 60%;
-  height: 60%;
-  margin: 10% auto;
-  animation: rounding 2s infinite linear;
+  display: flex;
+  align-items: center;
+  width: 35%;
+  height: 48%;
+  margin: 10px auto 20% auto;
+  
  }
  
  .spinner .points .point-first,
  .spinner .points .point-second {
   width: 50%;
   height: 50%;
-  border-radius: 100%;
+  margin: 3px;
+  border-radius: 50%;
   background: #fefefe;
-  animation: spin 2s infinite;
+  animation: spin2 2s infinite;
  }
  
  .spinner .points .point-second {
@@ -191,24 +201,32 @@ body {
   }
  }
  
- @keyframes spin {
+
+@keyframes spin2 {
   0%,
   100% {
-   transform: scale(0.0);
+   width: 0%;
+   height: 0%;
   }
   50% {
-   transform: scale(1.0);
+   width: 50%;
+   height: 50%;
   }
  }
 
 /* Equalizer loader */
+.equalizer {
+  width: 140px;
+  height: 100px;  
+  margin: 0 auto;
+}
 .equalizer-circle {
   position: absolute;
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   background-color: #fff; 
   border-radius: 50%;
-  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.5);
+  box-shadow: 0.2px 0.2px 2px 0 rgba(0,0,0,0.5);
   animation-name: jumping;
   animation-duration: 4s;
   animation-timing-function: linear;
@@ -220,79 +238,79 @@ body {
 .equalizer-level-4,
 .equalizer-level-5 {
   background-color: #fff;
-  width: 10%;
+  width: 10px;
   position: absolute;
   bottom: 0;
-  box-shadow: 1px -1px 3px 0 rgba(0,0,0,0.5);
+  box-shadow: 0.2px -0.2px 3px 0 rgba(0,0,0,0.5);
   animation-duration: 4s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 .equalizer-level-1 {
-  height: 20px;
-  animation-name: for-equalizer-lavel-1;
+  height: 10px;
+  animation-name: for-equalizer-level-1;
 }
 .equalizer-level-2 {  
-  left: 30px;
-  height: 40px;
-  animation-name: for-equalizer-lavel-2;
+  left: 15px;
+  height: 20px;
+  animation-name: for-equalizer-level-2;
 }
 .equalizer-level-3 {  
-  left: 60px;
-  height: 60px;
+  left: 30px;
+  height: 30px;
 }
 .equalizer-level-4 {  
-  left: 90px;
-  height: 80px;
-  animation-name: for-equalizer-lavel-4;
+  left: 45px;
+  height: 40px;
+  animation-name: for-equalizer-level-4;
 }
 .equalizer-level-5 {  
-  left: 120px;
-  height: 100px;
-  animation-name: for-equalizer-lavel-5;
+  left: 60px;
+  height: 50px;
+  animation-name: for-equalizer-level-5;
 }
 @keyframes jumping {
-  0% {left: 2.5px; bottom: 20px;} /*start*/
-  6% {left: 20px; bottom: 50px;} /*up to 2*/
-  11% {left: 32.5px; bottom: 40px;} /*down to 2*/
-  17% {left: 52.5px; bottom: 70px;} /*up to 3*/
-  22% {left: 62.5px; bottom: 60px;} /*down to 3*/
-  28% {left: 80px; bottom: 90px;} /*up to 4*/
-  33% {left: 92.5px; bottom: 80px;} /*down to 4*/
-  39% {left: 107.5px; bottom: 110px;} /*up to 5*/
-  44% {left: 122.5px; bottom: 100px;} /*down to 5*/
-  50% {left: 122.5px; bottom: 20px;} /*move to small step right*/
-  56% {left: 107.5px; bottom: 50px;} /*up to 4 */
-  61% {left: 92.5px; bottom: 40px;} /*down to 4*/
-  67% {left: 80px; bottom: 70px;} /*up to 3*/
-  72% {left: 62.5px; bottom: 60px;} /*down to 3*/
-  79% {left: 52.5px; bottom: 90px;} /*up to 2*/
-  84% {left: 32.5px; bottom: 80px;} /*down to 2*/
-  90% {left: 20px; bottom: 110px;} /*up to 1*/
-  95% {left: 2.5px; bottom: 100px;} /*down to 1*/
-  100% {left: 2.5px; bottom: 20px;} /*move to small steр left*/
+  0% {left: 0; bottom: 10px;} /*start*/
+  6% {left: 10px; bottom: 25px;} /*up to 2*/
+  11% {left: 15px; bottom: 20px;} /*down to 2*/
+  17% {left: 25px; bottom: 35px;} /*up to 3*/
+  22% {left: 30px; bottom: 30px;} /*down to 3*/
+  28% {left: 40px; bottom: 45px;} /*up to 4*/
+  33% {left: 45px; bottom: 40px;} /*down to 4*/
+  39% {left: 50px; bottom: 55px;} /*up to 5*/
+  44% {left: 60px; bottom: 50px;} /*down to 5*/
+  50% {left: 60px; bottom: 10px;} /*move to small step right*/
+  56% {left: 52px; bottom: 25px;} /*up to 4 */
+  61% {left: 45px; bottom: 20px;} /*down to 4*/
+  67% {left: 42px; bottom: 35px;} /*up to 3*/
+  72% {left: 30px; bottom: 30px;} /*down to 3*/
+  79% {left: 22px; bottom: 45px;} /*up to 2*/
+  84% {left: 15px; bottom: 40px;} /*down to 2*/
+  90% {left: 12px; bottom: 55px;} /*up to 1*/
+  95% {left: 0px; bottom: 50px;} /*down to 1*/
+  100% {left: 0px; bottom: 10px;} /*move to small steр left*/
 }
-@keyframes for-equalizer-lavel-1 {
+@keyframes for-equalizer-level-1 {
+  0% {height: 10px;}
+  44% {height: 10px;}
+  50% {height: 50px;}
+  95% {height: 50px;}
+}
+@keyframes for-equalizer-level-2 {
   0% {height: 20px;}
   44% {height: 20px;}
-  50% {height: 100px;}
-  95% {height: 100px;}
-}
-@keyframes for-equalizer-lavel-2 {
-  0% {height: 40px;}
-  44% {height: 40px;}
-  50% {height: 80px;}
-  95% {height: 80px;}
-}
-@keyframes for-equalizer-lavel-4 {
-  0% {height: 80px;}
-  44% {height: 80px;}
   50% {height: 40px;}
   95% {height: 40px;}
 }
-@keyframes for-equalizer-lavel-5 {
-  0% {height: 100px;}
-  44% {height: 100px;}
+@keyframes for-equalizer-level-4 {
+  0% {height: 40px;}
+  44% {height: 40px;}
   50% {height: 20px;}
   95% {height: 20px;}
+}
+@keyframes for-equalizer-level-5 {
+  0% {height: 50px;}
+  44% {height: 50px;}
+  50% {height: 10px;}
+  95% {height: 10px;}
 }
