Rounder blocks, spinner animation.

--- a/styles.css
+++ b/styles.css
@@ -169,16 +169,16 @@ body {
 
 /* Spinner section */
 .spinner {
-    animation: rounding 2s infinite linear;  
+  margin-top: 40px;
+  animation: rounding 2s infinite linear;  
 }
 
 .spinner .points {
   display: flex;
   align-items: center;
   width: 35%;
-  height: 48%;
+  height: 50%;
   margin: 10px auto 20% auto;
-  
  }
  
  .spinner .points .point-first,
@@ -198,19 +198,6 @@ body {
  @keyframes rounding {
   100% {
    transform: rotate(360deg);
-  }
- }
- 
-
-@keyframes spin2 {
-  0%,
-  100% {
-   width: 0%;
-   height: 0%;
-  }
-  50% {
-   width: 50%;
-   height: 50%;
   }
  }
 
